--- a/Traffic_Signs_Recognition.ipynb
+++ b/Traffic_Signs_Recognition.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 61,
    "metadata": {
     "collapsed": false
    },
@@ -198,17 +198,18 @@
     "\n",
     "# Parameters\n",
     "learning_rate = 0.001\n",
-    "training_iters = 200000\n",
+    "training_iters = 10000\n",
     "batch_size = 128\n",
     "display_step = 100\n",
     "\n",
     "n_input = 1024\n",
-    "n_classes = 43"
+    "n_classes = 43\n",
+    "num_channels = 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -271,9 +272,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 63,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -294,7 +295,7 @@
     "# Create model\n",
     "def conv_net(x, weights, biases, dropout):\n",
     "    # Reshape input picture\n",
-    "    x = tf.reshape(x, shape=[-1, 32, 32, 3])\n",
+    "    x = tf.reshape(x, shape=[-1, 32, 32, num_channels])\n",
     "\n",
     "    # Convolution Layer\n",
     "    conv1 = conv2d(x, weights['wc1'], biases['bc1'])\n",
@@ -321,15 +322,15 @@
     "    return out\n",
     "\n",
     "weights = {\n",
-    "    'wc1': tf.Variable(tf.random_normal([5, 5, 3, 64], stddev=0.1)),\n",
-    "    'wc2': tf.Variable(tf.random_normal([5, 5, 64, 64], stddev=0.1)),\n",
-    "    'wd1': tf.Variable(tf.random_normal([8*8*64, 256], stddev=0.1)),\n",
+    "    'wc1': tf.Variable(tf.random_normal([5, 5, num_channels, 128], stddev=0.1)),\n",
+    "    'wc2': tf.Variable(tf.random_normal([5, 5, 128, 128], stddev=0.1)),\n",
+    "    'wd1': tf.Variable(tf.random_normal([8*8*128, 256], stddev=0.1)),\n",
     "    'out': tf.Variable(tf.random_normal([256, n_classes], stddev=0.1))\n",
     "}\n",
     "\n",
     "biases = {\n",
-    "    'bc1': tf.Variable(tf.random_normal([64], stddev=0.1)),\n",
-    "    'bc2': tf.Variable(tf.random_normal([64], stddev=0.1)),\n",
+    "    'bc1': tf.Variable(tf.random_normal([128], stddev=0.1)),\n",
+    "    'bc2': tf.Variable(tf.random_normal([128], stddev=0.1)),\n",
     "    'bd1': tf.Variable(tf.random_normal([256], stddev=0.1)),\n",
     "    'out': tf.Variable(tf.random_normal([n_classes], stddev=0.1))\n",
     "}\n",
@@ -349,11 +350,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iter 3200, Minibatch Loss= 3.629306, Training Accuracy= 0.07031\n",
+      "Iter 6400, Minibatch Loss= 3.507545, Training Accuracy= 0.05469\n",
+      "Iter 9600, Minibatch Loss= 3.402618, Training Accuracy= 0.10938\n",
+      "Model saved in file: model-test.ckpt\n"
+     ]
+    }
+   ],
    "source": [
     "# Launch the graph\n",
     "init = tf.initialize_all_variables()\n",
@@ -376,14 +388,14 @@
     "        step += 1\n",
     "    \n",
     "    saver = tf.train.Saver()\n",
-    "    save_path = saver.save(sess, \"model.ckpt\")\n",
+    "    save_path = saver.save(sess, \"model-test.ckpt\")\n",
     "    print(\"Model saved in file: %s\" % save_path)\n",
     "    \n",
-    "    total = 0\n",
-    "    for i in range(12):\n",
-    "        batch_x, batch_y = X_test.reshape((-1, n_input))[i*1000:(i+1)*1000], y_test_ohe[i*1000:(i+1)*1000]\n",
-    "        total += sess.run(accuracy, feed_dict={x: batch_x,y: batch_y, keep_prob: 1.})\n",
-    "    print (\"Total accuracy\", total / 12)"
+    "#     total = 0\n",
+    "#     for i in range(12):\n",
+    "#         batch_x, batch_y = X_test.reshape((-1, n_input))[i*1000:(i+1)*1000], y_test_ohe[i*1000:(i+1)*1000]\n",
+    "#         total += sess.run(accuracy, feed_dict={x: batch_x,y: batch_y, keep_prob: 1.})\n",
+    "#     print (\"Total accuracy\", total / 12)"
    ]
   },
   {
@@ -498,31 +510,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 69,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 1024)\n",
+      "Model restored with latest weights\n",
+      "3\n"
+     ]
+    }
+   ],
    "source": [
-    "from skimage import io\n",
-    "test_imgs = np.uint8(np.zeros((1,32,32,3)))\n",
-    "for i in range(1,11):\n",
-    "    image = io.imread('img1.png')\n",
-    "    test_imgs[i-1] = image\n",
-    "\n",
+    "test_imgs = cv2.imread('traffic-signs-data/img1.png', 0).reshape(1, 1024)\n",
+    "print (test_imgs.shape)\n",
+    "    \n",
     "with tf.Session() as sess:\n",
     "    tf.initialize_all_variables().run()\n",
     "    saver = tf.train.Saver()\n",
-    "    saver.restore(sess, \"model.ckpt\")\n",
+    "    saver.restore(sess, \"model-test.ckpt\")\n",
     "    total = 0\n",
     "    print('Model restored with latest weights')\n",
     "    total = 0\n",
-    "    sess.run(pred, feed_dict={x: test_imgs,\n",
-    "                              weights: weights,\n",
-    "                              keep_prob: .75,\n",
-    "                              biases: biases\n",
-    "                             })\n",
-    "    pred = conv_net(x, weights, biases, keep_prob)"
+    "    print (np.argmax(sess.run(pred, feed_dict={x: test_imgs,\n",
+    "                              keep_prob: .75\n",
+    "                             })))"
    ]
   },
   {
